src/objects/MUSW__Vehicle__c.object
<CustomObject>
    <description>Vehicle information on Complaint cases</description>
    <fields>
        <fullName>MUSW__Color__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Color</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Complaint</label>
        <referenceTo>MUSW__Complaint__c</referenceTo>
        <relationshipName>Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Condition__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Condition</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__License_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>License No.</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__License_State__c</fullName>
        <label>License State/ Prov.</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Make__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Make</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Model__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Model</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Notice_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Notice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Vehicles Owned</relationshipLabel>
        <relationshipName>Vehicles_Owned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Reclaim_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reclaim Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Remarks__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Sticker_Expiration_Full__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sticker Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Sticker_Expiration__c</fullName>
        <description>Month/Year MM/YYYY</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sticker Expiration Month/Year</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Sticker_Serial_Number__c</fullName>
        <label>Sticker Serial Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Tow_Charge__c</fullName>
        <label>Tow Charge</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Tow_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tow Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Tow_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tow Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Towing_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Towing Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vehicles Towed</relationshipLabel>
        <relationshipName>Vehicles_Towed</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__VIN2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>VIN</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__VIN__c</fullName>
        <label>VIN Old</label>
        <precision>17</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Year__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>YYYY</inlineHelpText>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Vehicle</label>
    <listViews>
        <fullName>MUSW__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>